--- a/src/fonts.css
+++ b/src/fonts.css
@@ -52,6 +52,7 @@
 html {
   background-color: #F6F7F9;
   min-height: 100%;
+  overscroll-behavior: none;
 }
 
 body {
@@ -59,11 +60,13 @@ body {
   margin: 0;
   padding: 0;
   min-height: 100vh;
+  overscroll-behavior: none;
 }
 
 #root {
   background-color: #F6F7F9;
   min-height: 100vh;
+  overscroll-behavior: none;
 }
 
 /* Global font settings */
